@@ -1,7 +1,6 @@
 from gi.repository import Gio
 
-def get_settings(key=""):
-    base = 'com.googlecode.gfeedline'
+def get_settings(key="", base="com.googlecode.gfeedline"):
     object = Gio.Settings.new(base + key)
     return object
 
@@ -12,3 +11,5 @@ SETTINGS_PLUGINS = get_settings('.plugins')
 SETTINGS_TWITTER = get_settings('.plugins.twitter')
 SETTINGS_FACEBOOK = get_settings('.plugins.facebook')
 SETTINGS_TUMBLR = get_settings('.plugins.tumblr')
+
+SETTINGS_DESKTOP = get_settings(base='org.gnome.desktop.interface')
