@@ -1,3 +1,7 @@
+2013-07-03  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* preferences.py: Added support for system font setting.
+
 2013-06-30  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* NEWS: 2.3.1 release.
